# context-engineering

./: .env.example  .eslintrc.js  .gitignore  AI_RULES.md  CHANGELOG.md  CLAUDE.md  EXTENDING.md  INSTALL.md  MIGRATION_COMPLETE.md  NEXT_STEPS.md  QUICK_START.md  README.md  RELEASE.md  RELEASE_READY.md  SIMPLIFICATION_COMPLETE.md  SIMPLIFICATION_PROPOSAL.md  TEST_PLAN.md  advanced_tools.md  gold-standard.md  install-cli.ps1  install.bat  install.sh  opencode.json  package-lock.json  package.json  pyproject.toml  release-notes.md  setup.ps1  validate.sh
.claude/agents/: submit-pr.md
.claude/commands/: execute-prp.md  refine-task.md
.github/: SETUP.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/agents/: code-review-expert.md  triage-expert.md
.github/agents/database/: database-mongodb-expert.md
.github/agents/framework/: framework-nextjs-expert.md
.github/agents/infrastructure/: infrastructure-github-actions-expert.md
.github/agents/testing/: vitest-testing-expert.md
.github/agents/typescript/: typescript-build-expert.md
.github/commands/: create-subagent.md
.github/commands/config/: bash-timeout.md
.github/skills/contrarian-architecture-review/: SKILL.md
.github/skills/critical-design-review/: SKILL.md
.github/skills/expert-panel-review/: SKILL.md
.github/skills/first-principles-refactor/: SKILL.md
.github/skills/production-reality-check/: SKILL.md
.github/skills/stepwise-debug-explain/: SKILL.md
.github/skills/svg/: SKILL.md
.github/workflows/: npm-publish.yml  publish.yml  release.yml
.opencode/agents/: gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
.opencode/commands/gsd/: add-phase.md  add-todo.md  audit-milestone.md  check-todos.md  complete-milestone.md  debug.md  discuss-phase.md  execute-phase.md  help.md  insert-phase.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  progress.md  quick.md  remove-phase.md  research-phase.md  resume-work.md  set-profile.md  settings.md  update.md  verify-work.md  whats-new.md
.opencode/get-shit-done/references/: continuation-format.md  model-profiles.md  ui-brand.md  verification-patterns.md
.opencode/get-shit-done/templates/: DEBUG.md  UAT.md  debug-subagent-prompt.md  discovery.md  phase-prompt.md  planner-subagent-prompt.md  project.md  state.md
.opencode/get-shit-done/templates/codebase/: structure.md
.opencode/get-shit-done/workflows/: complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase.md  execute-phase.md  execute-plan.md  list-phase-assumptions.md  map-codebase.md  resume-project.md  transition.md  verify-phase.md  verify-work.md
PRPs/active/: 123-sample-feature.md
cli/: package-lock.json  package.json  tsconfig.json
cli/assets/: AI_RULES.md  mcp.json
cli/assets/agents/build-tools/: build-tools-webpack-expert.md
cli/assets/agents/database/: database-expert.md
cli/assets/agents/testing/: testing-expert.md
cli/assets/commands/agents-md/: init.md  migration.md
cli/scripts/: bundle.ts
cli/src/: app.tsx  index.tsx
cli/src/utils/: assets.ts
context/: setup.ps1
examples/claudekit/: package-lock.json  package.json
examples/claudekit/.claude/: settings.json
examples/claudekit/.claude/agents/build-tools/: build-tools-vite-expert.md
examples/claudekit/.claude/agents/database/: database-postgres-expert.md
examples/claudekit/.claude/agents/e2e/: e2e-playwright-expert.md
examples/claudekit/.claude/commands/: create-command.md
examples/claudekit/.claude/commands/agents-md/: cli.md
examples/claudekit/.claude/commands/spec/: decompose.md  execute.md
installer/: .env.example  README.md  install.py  package-lock.json  package.json  pyproject.toml
installer/src/context_engineering_installer/: __init__.py  install.py
installer/toolkit/: MCP_SERVERS.md  advanced_tools.md  validate.sh
installer/toolkit/.claude/: settings.local.json
installer/toolkit/.claude/agents/: create-task.md  start-task.md  validate-execution.md
installer/toolkit/.claude/commands/: create-task.md  execute-prp.md  start-task.md  submit-pr.md  validate-execution.md
installer/toolkit/.github/: PULL_REQUEST_TEMPLATE.md
installer/toolkit/runtimes/: README.md
installer/toolkit/runtimes/node/: README.md
installer/toolkit/runtimes/node/scripts/: post-issue.cjs
installer/toolkit/runtimes/python/: README.md
installer/toolkit/runtimes/python/scripts/: post_issue.py
installer/toolkit/runtimes/python/scripts/generation/: generate_from_issue.py
installer/toolkit/runtimes/python/scripts/submission/: submit_pr.py
installer/toolkit/scripts/: detect-runtime.sh  post-issue-universal.bat  post-issue-universal.sh  post-issue.js
installer/toolkit/scripts/submission/: submit-pr.cjs  submit-pr.js
installer/toolkit/warp-workflows/: 01-context-engineering-planning.md  03-context-engineering-submission.md  README.md  warp-prp-template.md
powershell/ContextManager/: ContextManager.psd1  ContextManager.psm1
scripts/: post-issue.js
scripts/submission/: submit-pr.js
src/context_installer/: __init__.py  main.py
src/context_installer/toolkit/: advanced_tools.md
src/context_installer/toolkit/.claude/agents/: refine-task.md
src/context_installer/toolkit/.claude/commands/: create-task.md  refine-task.md  start-task.md  submit-pr.md  validate-execution.md
src/context_installer/toolkit/scripts/: post-issue.cjs
src/context_installer/toolkit/scripts/generation/: generate-from-issue.cjs
warp-workflows/: 02-context-engineering-execution.md  04-context-engineering-snippets.md
