[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engineering-installer"
version = "2.0.0"
description = "Context Engineering Toolkit - Universal installer with UV and NPM support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Context Engineering Community"}
]
keywords = [
    "context-engineering",
    "ai-workflow",
    "github-automation",
    "claude-code",
    "installer",
    "uv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "rich>=10.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/tazomatalax/context-engineering"
Repository = "https://github.com/tazomatalax/context-engineering.git"
Issues = "https://github.com/tazomatalax/context-engineering/issues"

[project.scripts]
context-engineering-installer = "context_installer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_installer"]
include = [
    "installer/toolkit/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/installer/toolkit",
    "/README.md"
]

[tool.hatch.version]
path = "src/context_installer/__init__.py"